--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -2039,7 +2039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2051,22 +2051,22 @@
       "Data columns (total 15 columns):\n",
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
-      " 0   air_conditioner  91329 non-null  object \n",
-      " 1   bath_num         91329 non-null  object \n",
-      " 2   chimney          91329 non-null  object \n",
+      " 0   air_conditioner  91329 non-null  int64  \n",
+      " 1   bath_num         91329 non-null  int64  \n",
+      " 2   chimney          91329 non-null  int64  \n",
       " 3   condition        91329 non-null  object \n",
       " 4   garage           91329 non-null  object \n",
-      " 5   garden           91329 non-null  object \n",
+      " 5   garden           91329 non-null  int64  \n",
       " 6   house_type       91329 non-null  object \n",
       " 7   loc_full         91329 non-null  object \n",
       " 8   m2_real          91329 non-null  int64  \n",
       " 9   price            91329 non-null  float64\n",
       " 10  room_num         91329 non-null  int64  \n",
-      " 11  storage_room     91329 non-null  object \n",
-      " 12  swimming_pool    91329 non-null  object \n",
-      " 13  terrace          91329 non-null  object \n",
+      " 11  storage_room     91329 non-null  int64  \n",
+      " 12  swimming_pool    91329 non-null  int64  \n",
+      " 13  terrace          91329 non-null  int64  \n",
       " 14  city_prov        91329 non-null  object \n",
-      "dtypes: float64(1), int64(2), object(12)\n",
+      "dtypes: float64(1), int64(9), object(5)\n",
       "memory usage: 11.1+ MB\n"
      ]
     }
@@ -2076,8 +2076,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some numerical variables were converted to object type due to mixed data types within the same column and how the data was loaded from the CSV file. The following function corrects this issue and assigns the correct data type to each column."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "air_conditioner      int64\n",
+      "bath_num             int64\n",
+      "chimney              int64\n",
+      "condition           object\n",
+      "garage              object\n",
+      "garden               int64\n",
+      "house_type          object\n",
+      "loc_full            object\n",
+      "m2_real              int64\n",
+      "price              float64\n",
+      "room_num             int64\n",
+      "storage_room         int64\n",
+      "swimming_pool        int64\n",
+      "terrace              int64\n",
+      "city_prov           object\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List of columns to convert from object to numeric if possible\n",
+    "columns_to_convert = ['air_conditioner', 'bath_num', 'chimney', 'garden',\n",
+    "                      'storage_room', 'swimming_pool', 'terrace']\n",
+    "\n",
+    "# Apply pd.to_numeric() to each column.\n",
+    "for column in columns_to_convert:\n",
+    "    raw_data[column] = pd.to_numeric(raw_data[column])\n",
+    "\n",
+    "# Verifying the data types after conversion\n",
+    "print(raw_data.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
