fix_menu_and_intro_geolocalization

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -21,7 +21,15 @@
     "  - [Import Necessary Libraries](#import-necessary-libraries)\n",
     "  - [Function Declarations](#function-declarations)\n",
     "  - [Data Import and Initial Exploration](#data-import-and-initial-exploration)\n",
-    "- [Data Transformation](#data-transformation)"
+    "- [Data Transformation](#data-transformation)\n",
+    "  - [Data Filtering](#data-filtering)\n",
+    "  - [Data Deduplication](#data-deduplication)\n",
+    "  - [Handling Missing Data](#handling-missing-data)\n",
+    "  - [Individual Variable Analysis for Data Cleaning](#individual-variable-analysis-for-data-cleaning)\n",
+    "  - [Data derivation](#data-derivation)\n",
+    "  - [Saving the Cleaned Data](#saving-the-cleaned-data)\n",
+    "  - [Geolocalization](#geolocalization)\n",
+    "\n"
    ]
   },
   {
@@ -135,14 +143,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import gc"
    ]
   },
   {
@@ -971,7 +980,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Handling Missing Data and Data Cleaning"
+    "### Handling Missing Data"
    ]
   },
   {
@@ -1034,14 +1043,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Analysis of Remaining Variables"
+    "### Individual Variable Analysis for Data Cleaning"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**condition**"
+    "#### condition"
    ]
   },
   {
@@ -1219,7 +1228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**garage**"
+    "#### garage"
    ]
   },
   {
@@ -1297,7 +1306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Verify the missing values"
+    "#### Verify the missing values"
    ]
   },
   {
@@ -1338,14 +1347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transformation of the Remaining Variables"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**air_conditioner**  "
+    "#### air_conditioner"
    ]
   },
   {
@@ -1375,7 +1377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**swimming_pool**  "
+    "#### swimming_pool"
    ]
   },
   {
@@ -1405,7 +1407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**storage_room**  "
+    "#### storage_room"
    ]
   },
   {
@@ -1435,7 +1437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**garden**"
+    "#### garden"
    ]
   },
   {
@@ -1465,7 +1467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**terrace**"
+    "#### terrace"
    ]
   },
   {
@@ -1495,7 +1497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**room_num**  "
+    "#### room_num"
    ]
   },
   {
@@ -1558,7 +1560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**price**"
+    "#### price"
    ]
   },
   {
@@ -1587,7 +1589,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**m2_real**"
+    "#### m2_real"
    ]
   },
   {
@@ -1617,7 +1619,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**house_type**"
+    "#### house_type"
    ]
   },
   {
@@ -1821,7 +1823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**bath_num**"
+    "#### bath_num"
    ]
   },
   {
@@ -1901,7 +1903,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**loc_full**"
+    "#### loc_full"
    ]
   },
   {
@@ -2034,7 +2036,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Final Checks and Saving the Dataframe"
+    "### Saving the Cleaned Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Validating Data Before Saving"
    ]
   },
   {
@@ -2125,11 +2134,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1448"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "raw_data.to_csv('data/clean_data.csv', index=False)"
+    "raw_data.to_csv('data/clean_data.csv', index=False)\n",
+    "del raw_data\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Geolocalization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*This process is only documented due to the time required to run geocoding. The functions and code segments used are shown.*\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Obtain the full address, region, province, city, and coordinates through geolocation and integration of external data.**\n",
+    "\n",
+    "For this process, we use the **geopy** library, a Python client for several popular geocoding web services. To have this library available, we need to install it via **pip** in the Bash terminal or directly in a Jupyter Notebook cell.\n",
+    "\n",
+    "```python\n",
+    "    pip install geopy\n",
+    "```\n",
+    "\n",
+    "Import the geocoder to be used; in this case, we will use **Nominatim**, an Open Source geolocator that utilizes OpenStreetMap.\n",
+    "\n",
+    "```python\n",
+    "    # Import libraries\n",
+    "    import requests\n",
+    "    import time\n",
+    "\n",
+    "    # Import the geocoder\n",
+    "    from geopy.geocoders import Nominatim\n",
+    "\n",
+    "    # Error handling\n",
+    "    from geopy.exc import GeocoderTimedOut, GeocoderServiceError\n",
+    "```"
    ]
   }
  ],
