geolocalization_documented_section

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -2165,15 +2165,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*This process is only documented due to the time required to run geocoding. The functions and code segments used are shown.*\n",
-    "\n"
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Obtain the full address, region, province, city, and coordinates through geolocation and integration of external data.**\n",
+    "**This process is only documented due to the time required to run geocoding. The functions and code segments used are shown.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Obtain the full address, region, province, city, and coordinates through geolocation and integration of external data.\n",
     "\n",
     "For this process, we use the **geopy** library, a Python client for several popular geocoding web services. To have this library available, we need to install it via **pip** in the Bash terminal or directly in a Jupyter Notebook cell.\n",
     "\n",
@@ -2195,6 +2208,202 @@
     "    from geopy.exc import GeocoderTimedOut, GeocoderServiceError\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Split the dataframe into chunks to optimize memory and execution time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given the file’s size, geolocating all entries at once would be inefficient and could lead to memory issues and very high processing time. To mitigate this, the file is **divided into chunks of 10,000 rows**. The create_chunks function is designed to split the DataFrame, save each chunk to disk, and generate a list of the file names."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "    def create_chunks(df, chunksize, directory):\n",
+    "        file_names = []\n",
+    "        chunk_number = 0\n",
+    "\n",
+    "        # Iterar sobre el DataFrame en trozos de tamaño específico\n",
+    "        for start in range(0, len(df), chunksize):\n",
+    "            chunk_number += 1\n",
+    "            chunk = df[start:start + chunksize]\n",
+    "            # Guardar el chunk en un archivo CSV\n",
+    "            file_name = f'{directory}/dataframe_{chunk_number}.csv'\n",
+    "            chunk.to_csv(file_name, index=False)\n",
+    "            file_names.append(file_name)\n",
+    "            # Liberar memoria\n",
+    "            del chunk\n",
+    "            gc.collect()\n",
+    "\n",
+    "        return file_names\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Declare variables and execute functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "    # Output directory\n",
+    "    directory = 'data/'\n",
+    "\n",
+    "    # Input File\n",
+    "    df = pd.read_csv('data/clean_dataframe.csv')\n",
+    "\n",
+    "    # Chunks Size\n",
+    "    chunksize = 10000\n",
+    "\n",
+    "    chunks_files = create_chunks(input_csv, chunksize, directory)\n",
+    "    print(chunks_files)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Obtaining Latitude and Longitude"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The **geolocate** function takes the full address from the `loc_full` variable, attempts to geocode it, and returns the latitude and longitude. If there is an issue, it will try with the `city_prov` variable, which only includes the city and province. It will return `None` if neither of the two variables is successful. Between each iteration with the geolocator, it will wait for 1 second, which is the minimum time for each request with this geolocator. The function includes:\n",
+    "\n",
+    "- A loop to retry geolocation up to a maximum number of retries.\n",
+    "- A 10-second timeout for each geolocation attempt, as set in the **geopy** configuration.\n",
+    "- Error handling that includes a `time.sleep` with a `backoff_factor` to increase the wait time between retries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "    def geolocate(row, geolocator, retries=retries, backoff_factor=backoff_factor, timeout=timeout):\n",
+    "        address = row['loc_full']\n",
+    "        address_2 = row['city_prov']\n",
+    "        \n",
+    "        for attempt in range(retries):\n",
+    "            try:\n",
+    "                location = geolocator.geocode(address, timeout=timeout)\n",
+    "                if not location:\n",
+    "                    time.sleep(1)\n",
+    "                    location = geolocator.geocode(address_2, timeout=timeout)\n",
+    "                \n",
+    "                if location:\n",
+    "                    return pd.Series([location.latitude, location.longitude, location.address])\n",
+    "                else:\n",
+    "                    return pd.Series([None, None, None])\n",
+    "            except (GeocoderTimedOut, GeocoderServiceError) as e:\n",
+    "                print(f\"Error geocoding {address} or {address_2}: {e}\")\n",
+    "                time.sleep(backoff_factor * (2 ** attempt))\n",
+    "        return pd.Series([None, None, None])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `process_chunk` function generates the new data columns created with the `geolocate` function and adds them to the section of the dataframe being processed, then saves it to a CSV file. It then frees the created dataframe from memory and forces garbage collection. This method ensures that the memory used by the dataframe is released after saving, helping to maintain efficient memory usage when processing large volumes of data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "    def process_chunk(chunk_file, directory, geolocator):\n",
+    "        df_chunk = pd.read_csv(chunk_file)\n",
+    "        location_data = []\n",
+    "        for idx, row in df_chunk.iterrows():\n",
+    "            location_data.append(geolocate(row, geolocator))\n",
+    "            time.sleep(1)\n",
+    "        \n",
+    "        df_chunk[['latitude', 'longitude', 'address']] = pd.DataFrame(location_data)\n",
+    "        processed_file_name = f'{directory}/processed_{chunk_file.split(\"/\")[-1]}'\n",
+    "        df_chunk.to_csv(processed_file_name, index=False)\n",
+    "        # free the memory\n",
+    "        del df_chunk\n",
+    "        gc.collect()\n",
+    "        return processed_file_name\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define Variables and Execute Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "    # Define geolocator\n",
+    "    geolocator = Nominatim(user_agent=\"spanish_houses\")\n",
+    "\n",
+    "    # Funtions parameters\n",
+    "    retries = 3\n",
+    "    backoff_factor = 0.3\n",
+    "    timeout = 10\n",
+    "\n",
+    "    # Define variables\n",
+    "    directory = 'data/'\n",
+    "    chunk_file = 'data/dataframe_1.csv'\n",
+    "\n",
+    "    # Ejecute funtions\n",
+    "    process_chunk('data//dataframe_1.csv', directory, geolocator)\n",
+    "    process_chunk('data//dataframe_2.csv', directory, geolocator)\n",
+    "    ...\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**End of Documented Section**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
