Fix-documented-section

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -29,6 +29,7 @@
     "  - [Data derivation](#data-derivation)\n",
     "  - [Saving the Cleaned Data](#saving-the-cleaned-data)\n",
     "  - [Geolocalization](#geolocalization)\n",
+    "  - [Processed Data Transformation](#processed-data-transformation)\n",
     "\n"
    ]
   },
@@ -2172,7 +2173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**This process is only documented due to the time required to run geocoding. The functions and code segments used are shown.**"
+    "**This section is only documented due to the time required to run geocoding. The functions and code segments used are shown.**"
    ]
   },
   {
@@ -2323,7 +2324,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `process_chunk` function generates the new data columns created with the `geolocate` function and adds them to the section of the dataframe being processed, then saves it to a CSV file. It then frees the created dataframe from memory and forces garbage collection. This method ensures that the memory used by the dataframe is released after saving, helping to maintain efficient memory usage when processing large volumes of data."
+    "The **split_address** function extracts the `postal code`, `region`, and `municipality` from the address provided by the geolocation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "    def split_address(df, address_col):\n",
+    "        df = df.copy()   \n",
+    "        p_codes = []\n",
+    "        regions = []\n",
+    "        municipalities = []\n",
+    "\n",
+    "        for address in df[address_col]:\n",
+    "            if address:\n",
+    "                parts = address.split(', ')\n",
+    "                if len(parts) >= 3:\n",
+    "                    possible_p_code = parts[-2]\n",
+    "                    \n",
+    "                    if len(possible_p_code) == 5 and possible_p_code.isdigit():\n",
+    "                        p_code = possible_p_code\n",
+    "                        region = parts[-3]\n",
+    "                        municipality = parts[-4]\n",
+    "                    else:\n",
+    "                        p_code = None\n",
+    "                        region = parts[-2]\n",
+    "                        municipality = parts[-3]\n",
+    "                else:\n",
+    "                    p_code = None\n",
+    "                    region = None\n",
+    "                    municipality = None\n",
+    "            else:\n",
+    "                p_code = None\n",
+    "                region = None\n",
+    "                municipality = None\n",
+    "\n",
+    "            p_codes.append(p_code)\n",
+    "            regions.append(region)\n",
+    "            municipalities.append(municipality)\n",
+    "        \n",
+    "        df['p_code'] = p_codes\n",
+    "        df['region'] = regions\n",
+    "        df['municipality'] = municipalities\n",
+    "        \n",
+    "        return df\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The **process_chunk** function generates the new data columns created with **geolocate** and **split_address** function and adds them to the section of the dataframe being processed, then saves it to a CSV file. It then frees the created dataframe from memory and forces garbage collection. This method ensures that the memory used by the dataframe is released after saving, helping to maintain efficient memory usage when processing large volumes of data."
    ]
   },
   {
@@ -2332,19 +2386,25 @@
    "source": [
     "```python\n",
     "    def process_chunk(chunk_file, directory, geolocator):\n",
-    "        df_chunk = pd.read_csv(chunk_file)\n",
-    "        location_data = []\n",
-    "        for idx, row in df_chunk.iterrows():\n",
-    "            location_data.append(geolocate(row, geolocator))\n",
-    "            time.sleep(1)\n",
-    "        \n",
-    "        df_chunk[['latitude', 'longitude', 'address']] = pd.DataFrame(location_data)\n",
-    "        processed_file_name = f'{directory}/processed_{chunk_file.split(\"/\")[-1]}'\n",
-    "        df_chunk.to_csv(processed_file_name, index=False)\n",
-    "        # free the memory\n",
-    "        del df_chunk\n",
-    "        gc.collect()\n",
-    "        return processed_file_name\n",
+    "    df_chunk = pd.read_csv(chunk_file)\n",
+    "    location_data = []\n",
+    "    \n",
+    "    for idx, row in df_chunk.iterrows():\n",
+    "        location_data.append(geolocate(row, geolocator))\n",
+    "        time.sleep(1)  \n",
+    "    df_chunk[['latitude', 'longitude', 'address']] = pd.DataFrame(location_data)\n",
+    "    df_chunk = split_address(df_chunk, 'address')\n",
+    "    \n",
+    "    # Save dataframe\n",
+    "    processed_file_name = f'{directory}/processed_{chunk_file.split(\"/\")[-1]}'\n",
+    "    df_chunk.to_csv(processed_file_name, index=False)\n",
+    "    \n",
+    "    # Free memory\n",
+    "    del df_chunk\n",
+    "    gc.collect()\n",
+    "    \n",
+    "    return processed_file_name\n",
+    "\n",
     "```"
    ]
   },
@@ -2369,12 +2429,11 @@
     "    timeout = 10\n",
     "\n",
     "    # Define variables\n",
-    "    directory = 'data/'\n",
-    "    chunk_file = 'data/dataframe_1.csv'\n",
+    "    directory = 'data/chunks/'\n",
     "\n",
-    "    # Ejecute funtions\n",
-    "    process_chunk('data//dataframe_1.csv', directory, geolocator)\n",
-    "    process_chunk('data//dataframe_2.csv', directory, geolocator)\n",
+    "    # Execute functions to obtain Latitude and Longitude\n",
+    "    process_chunk('data/chunks/dataframe_1.csv', directory, geolocator)\n",
+    "    process_chunk('data/chunks/dataframe_2.csv', directory, geolocator)\n",
     "    ...\n",
     "```"
    ]
@@ -2399,11 +2458,6 @@
    "source": [
     "---"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
