saving_geolocalized_data

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -29,7 +29,9 @@
     "  - [Data derivation](#data-derivation)\n",
     "  - [Saving the Cleaned Data](#saving-the-cleaned-data)\n",
     "  - [Geolocalization](#geolocalization)\n",
-    "  - [Processed Data Transformation](#processed-data-transformation)\n",
+    "  - [Saving Geolocalized Data ]\n",
+    "  - [Transformed Geolocalized Data](#transformed-geolocalized-data)\n",
+    "\n",
     "\n"
    ]
   },
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2457,6 +2459,37 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving Geolocalized Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processed_files = ['data/chunks/processed_dataframe_1.csv',\n",
+    "                   'data/chunks/processed_dataframe_2.csv',\n",
+    "                   'data/chunks/processed_dataframe_3.csv',\n",
+    "                   'data/chunks/processed_dataframe_4.csv',\n",
+    "                   'data/chunks/processed_dataframe_5.csv',\n",
+    "                   'data/chunks/processed_dataframe_6.csv',\n",
+    "                   'data/chunks/processed_dataframe_7.csv',\n",
+    "                   'data/chunks/processed_dataframe_8.csv',\n",
+    "                   'data/chunks/processed_dataframe_9.csv',\n",
+    "                   'data/chunks/processed_dataframe_10.csv']\n",
+    "\n",
+    "dataframes = [pd.read_csv(file) for file in processed_files]\n",
+    "processed_dataframe = pd.concat(dataframes, ignore_index=True)\n",
+    "\n",
+    "# Save the dataframe\n",
+    "processed_dataframe.to_csv('data/processed_dataframe.csv', index=False)"
    ]
   }
  ],
