--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -31,6 +31,7 @@
     "  - [Geolocalization](#geolocalization)\n",
     "  - [Saving Geolocalized Data](#saving-geolocalized-data)\n",
     "  - [Coordinate Cleaning](#coordinate-cleaning)\n",
+    "  - [Coordinate Fluctuation (Jittering)](#coordinate-fluctuation-jittering)\n",
     "  \n",
     "\n",
     "\n"
@@ -2653,6 +2654,100 @@
     "# Verifying\n",
     "print(f\"Latitude: Min = {processed_data['latitude'].min()}, Max = {processed_data['latitude'].max()}\")\n",
     "print(f\"Longitude: Min = {processed_data['longitude'].min()}, Max = {processed_data['longitude'].max()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Coordinate Fluctuation (Jittering)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Jittering** is a technique used to slightly disperse points that have identical or very similar coordinates, making data visualization and analysis easier. To perform Jittering, a small amount of random noise is added to the coordinates of each point to disperse them slightly. The **move_coordinates** function moves the coordinates by a random angle and distance provided by the **disperse_coordinates** function. This random angle and distance are converted into latitude and longitude degrees, which are then added to the original coordinates. In this way, multiple properties with the same coordinates will be separated by different distances and angles from the original point. One disadvantage of using this technique is that when the location is near the coast, it may result in locations appearing over the sea.\n",
+    "\n",
+    "The **disperse_coordinates** function first groups all the duplicate coordinates and applies the **move_coordinates** function to each line with a different angle and distance value within the ranges specified in the parameters.\n",
+    "\n",
+    "In our project, properties that share the same coordinates are because:\n",
+    "- In the case of buildings.\n",
+    "- if the address was not in the correct format, the geolocation function used the 'city_prov' variable, geolocating only the city.\n",
+    "- It is also common to find properties for sale that do not display their exact address and instead share a common address. This is a strategy used by real estate agents known as **blind listing**. In this strategy, the exact location of the property is not publicly disclosed to protect the seller's information and prevent other agents or potential buyers from contacting the owner directly without going through the agent handling the sale."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def move_coordinates(lat, lon, distance, angle):\n",
+    "    \"\"\"\n",
+    "    Moves the coordinates by a specified distance and angle.\n",
+    "    The distance is given in meters and the angle in degrees.\n",
+    "    \"\"\"\n",
+    "    # Radius of the earth in meters.\n",
+    "    R = 6378137.0\n",
+    "    \n",
+    "    # Convert distance from meters to degrees.\n",
+    "    delta_lat = distance / R\n",
+    "    delta_lon = distance / (R * np.cos(np.pi * lat / 180))\n",
+    "\n",
+    "    # Convert the angle to radians.\n",
+    "    theta = np.radians(angle)\n",
+    "\n",
+    "    new_lat = lat + delta_lat * np.sin(theta) * (180 / np.pi)\n",
+    "    new_lon = lon + delta_lon * np.cos(theta) * (180 / np.pi)\n",
+    "\n",
+    "    return new_lat, new_lon\n",
+    "\n",
+    "def disperse_coordinates(df, lat_col='latitude', lon_col='longitude', min_distance=10, max_distance=100):\n",
+    "    \"\"\"\n",
+    "    Randomly disperse coordinates.\n",
+    "    \"\"\"\n",
+    "    counts = df.groupby([lat_col, lon_col]).size().reset_index(name='counts')\n",
+    "    duplicates = counts[counts['counts'] > 1]\n",
+    "    \n",
+    "    for _, row in duplicates.iterrows():\n",
+    "        lat = row[lat_col]\n",
+    "        lon = row[lon_col]\n",
+    "        count = int(row['counts'])  # Convertir a entero\n",
+    "        \n",
+    "        angles = np.random.uniform(0, 360, count)\n",
+    "        distances = np.random.uniform(min_distance, max_distance, count)\n",
+    "        \n",
+    "        idx = df[(df[lat_col] == lat) & (df[lon_col] == lon)].index\n",
+    "        for i, angle, distance in zip(idx, angles, distances):\n",
+    "            new_lat, new_lon = move_coordinates(lat, lon, distance, angle)\n",
+    "            df.at[i, lat_col] = float(new_lat)\n",
+    "            df.at[i, lon_col] = float(new_lon)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define parameters.\n",
+    "lat_col='latitude'\n",
+    "lon_col='longitude'\n",
+    "min_distance = 100\n",
+    "max_distance = 150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform the Jittering\n",
+    "processed_data = disperse_coordinates(processed_data, lat_col, lon_col, min_distance, max_distance)"
    ]
   }
  ],
