create_price_segment

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -32,6 +32,8 @@
     "  - [Saving Geolocalized Data](#saving-geolocalized-data)\n",
     "  - [Coordinate Cleaning](#coordinate-cleaning)\n",
     "  - [Coordinate Fluctuation (Jittering)](#coordinate-fluctuation-jittering)\n",
+    "  - [Handling Outliers](#handling-outliers)\n",
+    "  \n",
     "  \n",
     "\n",
     "\n"
@@ -2713,7 +2715,7 @@
     "    for _, row in duplicates.iterrows():\n",
     "        lat = row[lat_col]\n",
     "        lon = row[lon_col]\n",
-    "        count = int(row['counts'])  # Convertir a entero\n",
+    "        count = int(row['counts']) \n",
     "        \n",
     "        angles = np.random.uniform(0, 360, count)\n",
     "        distances = np.random.uniform(min_distance, max_distance, count)\n",
@@ -2748,6 +2750,39 @@
    "source": [
     "# Perform the Jittering\n",
     "processed_data = disperse_coordinates(processed_data, lat_col, lon_col, min_distance, max_distance)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Handling Outliers "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The treatment of outliers in this project will be carried out in a segmented manner to ensure a more precise analysis. Instead of treating outliers across the entire dataset, the `price_segment` variable will be created to divide properties into three price categories: **Affordable**, **Mid-Range**, and **Luxury**. Then, within each price segment, outliers will be identified and removed for the variables `room_num`, `bath_num`, `m2_real`, and `price`.\n",
+    "\n",
+    "Price range for categorizing property prices:\n",
+    "- **Affordable**: For properties with accessible prices: up to €300,000.\n",
+    "- **Mid-Range**: For properties with moderate prices: from €300,000 to €700,000.\n",
+    "- **Luxury**: For properties with high prices: over €700,000."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ranges and labels\n",
+    "bins = [0, 300000, 700000, float('inf')]\n",
+    "labels = ['Affordable', 'Mid-Range', 'Luxury']\n",
+    "\n",
+    "# Create the categorical variable\n",
+    "processed_data.loc[:, 'price_segment'] = pd.cut(processed_data['price'], bins=bins, labels=labels)"
    ]
   }
  ],
