Removing_region_with_low_data

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -2784,6 +2784,90 @@
     "# Create the categorical variable\n",
     "processed_data.loc[:, 'price_segment'] = pd.cut(processed_data['price'], bins=bins, labels=labels)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Removing Regions with Insufficient Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "region\n",
+       "Islas Baleares          24123\n",
+       "País Vasco              23549\n",
+       "Galicia                  9792\n",
+       "Andalucía                6398\n",
+       "Castilla y León          6034\n",
+       "Castilla-La Mancha       6028\n",
+       "Comunidad de Madrid      5170\n",
+       "Cataluña                 4305\n",
+       "Comunidad Valenciana     3303\n",
+       "Canarias                 1185\n",
+       "Extremadura                 7\n",
+       "La Rioja                    5\n",
+       "Aragón                      3\n",
+       "Región de Murcia            2\n",
+       "Barcelona                   2\n",
+       "Gerona                      2\n",
+       "Gijón                       1\n",
+       "Piloña                      1\n",
+       "Navarra                     1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "processed_data['region'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "region\n",
+       "Islas Baleares          24123\n",
+       "País Vasco              23549\n",
+       "Galicia                  9792\n",
+       "Andalucía                6398\n",
+       "Castilla y León          6034\n",
+       "Castilla-La Mancha       6028\n",
+       "Comunidad de Madrid      5170\n",
+       "Cataluña                 4305\n",
+       "Comunidad Valenciana     3303\n",
+       "Canarias                 1185\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Eliminate records\n",
+    "region_counts = processed_data['region'].value_counts()\n",
+    "regions_to_keep = region_counts[region_counts > 7].index\n",
+    "processed_data = processed_data[processed_data['region'].isin(regions_to_keep)]\n",
+    "\n",
+    "# Verifying\n",
+    "processed_data['region'].value_counts()"
+   ]
   }
  ],
  "metadata": {
