--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis of Family Houses and Apartments in Spanish (2019)"
+    "# Analysis of Family Houses (2019)"
    ]
   },
   {
@@ -30,8 +30,8 @@
     "  - [Saving the Cleaned Data](#saving-the-cleaned-data)\n",
     "  - [Geolocalization](#geolocalization)\n",
     "  - [Saving Geolocalized Data](#saving-geolocalized-data)\n",
-    "  - [Coordinate Cleaning](#coordinate-cleaning)\n",
     "  - [Coordinate Fluctuation (Jittering)](#coordinate-fluctuation-jittering)\n",
+    "  - [Post-Geolocation Data Cleaning](#post-geolocation-data-cleaning)\n",
     "  - [Handling Outliers](#handling-outliers)\n",
     "  \n",
     "  \n",
@@ -2500,7 +2500,101 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Coordinate Cleaning"
+    "### Coordinate Fluctuation (Jittering)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Jittering** is a technique used to slightly disperse points that have identical or very similar coordinates, making data visualization and analysis easier. To perform Jittering, a small amount of random noise is added to the coordinates of each point to disperse them slightly. The **move_coordinates** function moves the coordinates by a random angle and distance provided by the **disperse_coordinates** function. This random angle and distance are converted into latitude and longitude degrees, which are then added to the original coordinates. In this way, multiple properties with the same coordinates will be separated by different distances and angles from the original point. One disadvantage of using this technique is that when the location is near the coast, it may result in locations appearing over the sea.\n",
+    "\n",
+    "The **disperse_coordinates** function first groups all the duplicate coordinates and applies the **move_coordinates** function to each line with a different angle and distance value within the ranges specified in the parameters.\n",
+    "\n",
+    "In our project, properties that share the same coordinates are because:\n",
+    "- In the case of buildings.\n",
+    "- if the address was not in the correct format, the geolocation function used the 'city_prov' variable, geolocating only the city.\n",
+    "- It is also common to find properties for sale that do not display their exact address and instead share a common address. This is a strategy used by real estate agents known as **blind listing**. In this strategy, the exact location of the property is not publicly disclosed to protect the seller's information and prevent other agents or potential buyers from contacting the owner directly without going through the agent handling the sale."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def move_coordinates(lat, lon, distance, angle):\n",
+    "    \"\"\"\n",
+    "    Moves the coordinates by a specified distance and angle.\n",
+    "    The distance is given in meters and the angle in degrees.\n",
+    "    \"\"\"\n",
+    "    # Radius of the earth in meters.\n",
+    "    R = 6378137.0\n",
+    "    \n",
+    "    # Convert distance from meters to degrees.\n",
+    "    delta_lat = distance / R\n",
+    "    delta_lon = distance / (R * np.cos(np.pi * lat / 180))\n",
+    "\n",
+    "    # Convert the angle to radians.\n",
+    "    theta = np.radians(angle)\n",
+    "\n",
+    "    new_lat = lat + delta_lat * np.sin(theta) * (180 / np.pi)\n",
+    "    new_lon = lon + delta_lon * np.cos(theta) * (180 / np.pi)\n",
+    "\n",
+    "    return new_lat, new_lon\n",
+    "\n",
+    "def disperse_coordinates(df, lat_col='latitude', lon_col='longitude', min_distance=10, max_distance=100):\n",
+    "    \"\"\"\n",
+    "    Randomly disperse coordinates.\n",
+    "    \"\"\"\n",
+    "    counts = df.groupby([lat_col, lon_col]).size().reset_index(name='counts')\n",
+    "    duplicates = counts[counts['counts'] > 1]\n",
+    "    \n",
+    "    for _, row in duplicates.iterrows():\n",
+    "        lat = row[lat_col]\n",
+    "        lon = row[lon_col]\n",
+    "        count = int(row['counts']) \n",
+    "        \n",
+    "        angles = np.random.uniform(0, 360, count)\n",
+    "        distances = np.random.uniform(min_distance, max_distance, count)\n",
+    "        \n",
+    "        idx = df[(df[lat_col] == lat) & (df[lon_col] == lon)].index\n",
+    "        for i, angle, distance in zip(idx, angles, distances):\n",
+    "            new_lat, new_lon = move_coordinates(lat, lon, distance, angle)\n",
+    "            df.at[i, lat_col] = float(new_lat)\n",
+    "            df.at[i, lon_col] = float(new_lon)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define parameters.\n",
+    "lat_col='latitude'\n",
+    "lon_col='longitude'\n",
+    "min_distance = 100\n",
+    "max_distance = 150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform the Jittering\n",
+    "processed_data = disperse_coordinates(processed_data, lat_col, lon_col, min_distance, max_distance)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Post-Geolocation Data Cleaning"
    ]
   },
   {
@@ -2557,7 +2651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Validating Ranges"
+    "#### Validating Coordenate Ranges"
    ]
   },
   {
@@ -2662,133 +2756,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Coordinate Fluctuation (Jittering)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Jittering** is a technique used to slightly disperse points that have identical or very similar coordinates, making data visualization and analysis easier. To perform Jittering, a small amount of random noise is added to the coordinates of each point to disperse them slightly. The **move_coordinates** function moves the coordinates by a random angle and distance provided by the **disperse_coordinates** function. This random angle and distance are converted into latitude and longitude degrees, which are then added to the original coordinates. In this way, multiple properties with the same coordinates will be separated by different distances and angles from the original point. One disadvantage of using this technique is that when the location is near the coast, it may result in locations appearing over the sea.\n",
-    "\n",
-    "The **disperse_coordinates** function first groups all the duplicate coordinates and applies the **move_coordinates** function to each line with a different angle and distance value within the ranges specified in the parameters.\n",
-    "\n",
-    "In our project, properties that share the same coordinates are because:\n",
-    "- In the case of buildings.\n",
-    "- if the address was not in the correct format, the geolocation function used the 'city_prov' variable, geolocating only the city.\n",
-    "- It is also common to find properties for sale that do not display their exact address and instead share a common address. This is a strategy used by real estate agents known as **blind listing**. In this strategy, the exact location of the property is not publicly disclosed to protect the seller's information and prevent other agents or potential buyers from contacting the owner directly without going through the agent handling the sale."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def move_coordinates(lat, lon, distance, angle):\n",
-    "    \"\"\"\n",
-    "    Moves the coordinates by a specified distance and angle.\n",
-    "    The distance is given in meters and the angle in degrees.\n",
-    "    \"\"\"\n",
-    "    # Radius of the earth in meters.\n",
-    "    R = 6378137.0\n",
-    "    \n",
-    "    # Convert distance from meters to degrees.\n",
-    "    delta_lat = distance / R\n",
-    "    delta_lon = distance / (R * np.cos(np.pi * lat / 180))\n",
-    "\n",
-    "    # Convert the angle to radians.\n",
-    "    theta = np.radians(angle)\n",
-    "\n",
-    "    new_lat = lat + delta_lat * np.sin(theta) * (180 / np.pi)\n",
-    "    new_lon = lon + delta_lon * np.cos(theta) * (180 / np.pi)\n",
-    "\n",
-    "    return new_lat, new_lon\n",
-    "\n",
-    "def disperse_coordinates(df, lat_col='latitude', lon_col='longitude', min_distance=10, max_distance=100):\n",
-    "    \"\"\"\n",
-    "    Randomly disperse coordinates.\n",
-    "    \"\"\"\n",
-    "    counts = df.groupby([lat_col, lon_col]).size().reset_index(name='counts')\n",
-    "    duplicates = counts[counts['counts'] > 1]\n",
-    "    \n",
-    "    for _, row in duplicates.iterrows():\n",
-    "        lat = row[lat_col]\n",
-    "        lon = row[lon_col]\n",
-    "        count = int(row['counts']) \n",
-    "        \n",
-    "        angles = np.random.uniform(0, 360, count)\n",
-    "        distances = np.random.uniform(min_distance, max_distance, count)\n",
-    "        \n",
-    "        idx = df[(df[lat_col] == lat) & (df[lon_col] == lon)].index\n",
-    "        for i, angle, distance in zip(idx, angles, distances):\n",
-    "            new_lat, new_lon = move_coordinates(lat, lon, distance, angle)\n",
-    "            df.at[i, lat_col] = float(new_lat)\n",
-    "            df.at[i, lon_col] = float(new_lon)\n",
-    "    \n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define parameters.\n",
-    "lat_col='latitude'\n",
-    "lon_col='longitude'\n",
-    "min_distance = 100\n",
-    "max_distance = 150"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Perform the Jittering\n",
-    "processed_data = disperse_coordinates(processed_data, lat_col, lon_col, min_distance, max_distance)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Handling Outliers "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The treatment of outliers in this project will be carried out in a segmented manner to ensure a more precise analysis. Instead of treating outliers across the entire dataset, the `price_segment` variable will be created to divide properties into three price categories: **Affordable**, **Mid-Range**, and **Luxury**. Then, within each price segment, outliers will be identified and removed for the variables `room_num`, `bath_num`, `m2_real`, and `price`.\n",
-    "\n",
-    "Price range for categorizing property prices:\n",
-    "- **Affordable**: For properties with accessible prices: up to €300,000.\n",
-    "- **Mid-Range**: For properties with moderate prices: from €300,000 to €700,000.\n",
-    "- **Luxury**: For properties with high prices: over €700,000."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ranges and labels\n",
-    "bins = [0, 300000, 700000, float('inf')]\n",
-    "labels = ['Affordable', 'Mid-Range', 'Luxury']\n",
-    "\n",
-    "# Create the categorical variable\n",
-    "processed_data.loc[:, 'price_segment'] = pd.cut(processed_data['price'], bins=bins, labels=labels)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Removing Regions with Insufficient Data"
    ]
   },
@@ -2868,6 +2835,108 @@
     "# Verifying\n",
     "processed_data['region'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Filtering House Types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this analysis, we are focused on studying family homes. Therefore, we will exclude housing types that do not meet this definition, such as rural homes or those with characteristics that do not align with the concept of a typical family residence."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Types of Housing to be Analyzed\n",
+    "\n",
+    "- **Apartment**: A dwelling within a multi-unit building. Although it’s not a standalone house, it is a valid option for families seeking affordable housing in urban areas.\n",
+    "- **Single-Family Home**: The most classic example of a family home. It is a detached house meant for a single family. Another term for this is \"Chalet\"\n",
+    "- **Townhouse**: A single-family home that shares walls with other houses, but each unit is separate. It is common in urban and suburban areas.\n",
+    "- **Cottage** is typically a small house for families, often modest and traditional, featuring a rustic and functional design. They are commonly used as holiday homes.\n",
+    "- **Duplex**: In Spain, a duplex refers to a type of 'Single-Family Home' that has two floors connected by an internal staircase or an elevator. Another term for this is \"Chalet Duplex\".\n",
+    "- **Semi-Detached House**: Similar to a duplex, but designed to house two families in separate homes divided by a single shared wall.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "house_type\n",
+       "Apartment              50777\n",
+       "Single-Family Home     19672\n",
+       "Townhouse               6123\n",
+       "Cottage                 3014\n",
+       "Farmhouse               2551\n",
+       "Duplex                  2537\n",
+       "Semi-Detached House     2463\n",
+       "Rural House             1611\n",
+       "Studio Apartment         800\n",
+       "Mansion                  128\n",
+       "Country House             98\n",
+       "Bungalow                  56\n",
+       "Ranch House               29\n",
+       "Tower House               19\n",
+       "Palace                     8\n",
+       "Castle                     1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "processed_data['house_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "house_type\n",
+       "Apartment              50777\n",
+       "Single-Family Home     19672\n",
+       "Townhouse               6123\n",
+       "Cottage                 3014\n",
+       "Duplex                  2537\n",
+       "Semi-Detached House     2463\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "house_types_to_exclude = ['Farmhouse', 'Rural House', 'Studio Apartment', 'Mansion', 'Country House', 'Bungalow', 'Ranch House', 'Tower House', 'Palace', 'Castle']\n",
+    "processed_data = processed_data[~processed_data['house_type'].isin(house_types_to_exclude)]\n",
+    "# Verifying\n",
+    "processed_data['house_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
